<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/PatientId"
        android:layout_width="167dp"
        android:layout_height="28dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/patientid"
        app:layout_constraintStart_toEndOf="@+id/PatientImage"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginLeft="4dp" />

    <TextView
        android:id="@+id/Age"
        android:layout_width="168dp"
        android:layout_height="23dp"
        android:layout_marginStart="8dp"
        android:text="@string/Age"
        app:layout_constraintStart_toEndOf="@+id/PatientImage"
        app:layout_constraintTop_toBottomOf="@+id/PatientId"
        android:layout_marginLeft="8dp" />

    <TextView
        android:id="@+id/Breed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/Breed"
        app:layout_constraintStart_toEndOf="@+id/PatientImage"
        app:layout_constraintTop_toBottomOf="@+id/Age"
        android:layout_marginLeft="8dp" />

    <ImageView
        android:id="@+id/PatientImage"
        android:layout_width="wrap_content"
        android:layout_height="72dp"
        android:layout_marginBottom="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/ic_launcher_round"
        android:layout_marginLeft="16dp" />
</android.support.constraint.ConstraintLayout>
